--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "dompdf/dompdf": "^1.0"
+        "dompdf/dompdf": "^1.0",
+        "yahnis-elsts/plugin-update-checker": "^5.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.5"
